--- a/style.css
+++ b/style.css
@@ -119,13 +119,13 @@ body {
 }
 
 .education {
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 500;
     padding-bottom: 10px;
 }
 
 .sub {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 500;
 }
 
@@ -139,7 +139,7 @@ body {
 
 .experience {
     padding-top: 10px;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 500;
 }
 
@@ -154,11 +154,21 @@ body {
     align-items: center;
 }
 
+.skill_head {
+    color: white;
+    width: 100%;
+    height: 50px;
+    font-size: 35px;
+    font-weight: 600;
+    padding-left: 40px;
+    margin-top: 15px;
+}
+
 .skill_box {
     color: white;
     width: 100%;
     height: 50px;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 600;
     margin-left: 10px;
 }
@@ -179,6 +189,7 @@ body {
     height: 40px;
     display: flex;
     align-items: center;
+    margin-left: 10px;
     gap: 15px;
 }
 
@@ -236,6 +247,8 @@ body {
     color: white;
     width: 33%;
     height: 40px;
+    padding-left: 5px;
+    margin-left: 10px;
     display: flex;
     align-items: center;
     gap: 10px;
